--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Glanz</title>
 </head>
 <body>
@@ -83,7 +84,7 @@
                     </div>
                     <div>
                         <label for="telefono">Número de teléfono</label>
-                        <input type="text" name="" id="telefono">
+                        <input type="cel" name="" id="telefono">
                     </div>
                     <div>
                         <label for="auto">Auto de interés</label>
