--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/style.css"> 
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>Glanz</title>
+    <title>Glanz | Automotores</title>
+    <link rel="shortcut icon" href="./img/logo-g-blanco.jpeg" type="image/x-icon">
+    <meta name="keywords" content="fiat, 0km, comprar un auto, concesionaria, automotriz, automotores,">
+    <meta name="description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido. Tienda oficial de Fiat. Elegí tu auto y compra ahora. Comunicate con nosotros y te asesoramos.">
+    <meta property="og:type" content="Informativa">
+    <meta property="og:title" content="Glanz | Automotores">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido.">
 </head>
-
 <body>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
@@ -63,26 +70,26 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="./img/fiat-cronos-precision1.3cvt-montecarlo.png" alt="cronos-precision">
                             <h3>Cronos precision</h3>
-                            <p>Características</p>
+                            <p>Tapizado interior de cuero | Llantas 16" | Caja autoátiva CVT</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="./img/fiat-pulse-impetus-azulbicolor.webp" alt="pulse-impetus">
                             <h3>Pulse impetus</h3>
-                            <p>Características</p>
+                            <p>Llantas de aleación de 17" carrocería bitono | Tablero full digital de 7" | Asientos tapizados en cuero</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="./img/fiat-toro-blanco.webp" alt="toro-volcano">
                             <h3>Toro volcano</h3>
-                            <p>Características</p>
+                            <p>ADAS | Apertura y encendido remoto | Llantas de aleación 18"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
