--- a/pages/compra-tu-auto.html
+++ b/pages/compra-tu-auto.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="../css/style.css">-->
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Glanz</title>
+    <title>Glanz | Comprá tu auto</title>
+    <link rel="shortcut icon" href="../img/logo-g-blanco.jpeg" type="image/x-icon">
+    <meta name="keywords" content="fiat, 0km, comprar un auto, concesionaria, automotriz, automotores, cronos, pulse, fiorino, strada, toro, ">
+    <meta name="description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido. Tienda oficial de Fiat. Elegí tu auto y compra ahora. Comunicate con nosotros y te asesoramos.">
+    <meta property="og:type" content="Informativa">
+    <meta property="og:title" content="Glanz | Comprá tu auto">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido.">
 </head>
 <body>
     <header>
@@ -49,7 +57,8 @@
     </header>
     <main>
         <section class="bienvenida">
-            <h1>COMPRÁ TU AUTO</h1>
+            <h1>GRUPO GLANZ</h1>
+            <p>Obtené tu 0Km</p>
         </section>
         <section class="carrusel">
             <div class="destacados">
@@ -58,26 +67,26 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-cronos-driveplus1.3mt-blanco.png" alt="cronos-drive">
                             <h3>Drive Pluse 1.3 mt</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Llantas aleación esmaltadas | Acabados cobrizos | Central multimedia 7"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-cronos-stile1.3mt-silverstonemetalizado.png" alt="cronos-stile">
                             <h3>Stile 1.3 mt</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Tapizado interior de cuero | Apoyabrazos delantero | Llantas 15"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-cronos-precision1.3cvt-montecarlo.png" alt="cronos-precision">
                             <h3>Precision 1.3 cvt</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Tapizado interior de cuero | Llantas 16" | Caja autoátiva CVT</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
@@ -101,34 +110,34 @@
             <div id="carouselExample1" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-pulse-drive-platabari.webp" alt="pulse-manual">
                             <h3>Drive Manual</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Fatos y ópticas LED | Llantas de aleacón de 16" | Central multimedia de 10,1"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-pulse-drive-alaska.webp" alt="pulse-automatico">
                             <h3>Drive Automático</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Aire acondicionado automático y digital | Caja automática CVT | Central multimedia de 10,1"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-pulse-audace-montecarlo.webp" alt="pulse-audace">
                             <h3>Audace</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Llantas de aleación de 16" esmaltadas | Motor 1.0 turbo | Caja automática CVT</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-pulse-impetus-azulbicolor.webp" alt="pulse-impetus">
                             <h3>Impetus</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Llantas de aleación de 17" carrocería bitono | Tablero full digital de 7" | Asientos tapizados en cuero</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
@@ -152,10 +161,9 @@
             <div id="carouselExample1" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-fiorino-blanco.webp" alt="fiorino">
                             <h3>Fiorino</h3>
-                            <p>Lorem ipsum dolor sit</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
@@ -169,34 +177,34 @@
             <div id="carouselExample2" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-strada-endurance-cabinadoble.webp" alt="strada-cabina-doble">
                             <h3>Endurance Cabina Doble</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Control de estabilidad con asistencia al arranque en pendiente | Control de traccion avanzado con E-Locker (TC+) | Radio AM/FM con Wireless Connectivity y comandos de audio al volante</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-strada-freedom-blanca.webp" alt="strada-freedom">
                             <h3>Freedom</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Alzacristales eléctricos en las 4 puertas | Alarma y cierre centralizado | Display de tablero multifunción de 3,5"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-strada-volcano-roja.webp" alt="strada-volcano">
                             <h3>Volcano</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Central multimedia Uconnect de 7" que espeja tu teléfono | Faros LED | Cámara y sensores traseros de estacionamiento</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-strada-volcano-roja.webp" alt="strada-volcano-13cvt">
                             <h3>Volcano 1.3 cvt</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Central multimedia Uconnect de 7" que espeja tu teléfono | Faros LED | Cámara y sensores traseros de estacionamiento</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
@@ -220,18 +228,18 @@
             <div id="carouselExample3" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-toro-grisgranito.webp" alt="toro-volcano">
                             <h3>Volcano</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>ADAS | Apertura y encendido remoto | Llantas de aleación 18"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <div>
+                        <div class="tarjeta">
                             <img src="../img/fiat-toro-blanco.webp" alt="toro-freedom">
                             <h3>Freedom</h3>
-                            <p>Lorem ipsum dolor sit</p>
+                            <p>Cargador inalámbrico | Central multimedia 8,4" | Faros full LED"</p>
                             <a class="vermas" href="">VER MÁS</a>
                         </div>
                     </div>
