--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/style.css"> 
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Glanz</title>
+    <title>Glanz | Nosotros </title>
+    <link rel="shortcut icon" href="../img/logo-g-blanco.jpeg" type="image/x-icon">
+    <meta name="keywords" content="fiat, 0km, comprar un auto, concesionaria, automotriz, automotores, asesoramiento ">
+    <meta name="description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido. Tienda oficial de Fiat. Elegí tu auto y compra ahora. Comunicate con nosotros y te asesoramos.">
+    <meta property="og:type" content="Informativa">
+    <meta property="og:title" content="Glanz | Nosotros">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido.">
 </head>
 <body>
     <header>
@@ -48,7 +56,8 @@
     </header>
     <main>  
         <section class="bienvenida">
-            <h1>NOSOTROS</h1>
+            <h1>GRUPO GLANZ</h1>
+            <p>Nosotros</p>
         </section>
         <section  class="somos">
             <img src="../img/nosotros.jpg" alt="personas-cerrando-un-trato">
