--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/estilos.css">    
-    <title>Glanz</title>
+    <title>Glanz | Preguntas frecuentes</title>
+    <link rel="shortcut icon" href="../img/logo-g-blanco.jpeg" type="image/x-icon">
+    <meta name="keywords" content="fiat, 0km, comprar un auto, concesionaria, automotriz, automotores, metodos de financiamiento, suscripcion, preguntas frecuentes">
+    <meta name="description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido. Tienda oficial de Fiat. Elegí tu auto y compra ahora. Comunicate con nosotros y te asesoramos.">
+    <meta property="og:type" content="Informativa">
+    <meta property="og:title" content="Glanz | Preguntas frecuentes">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Concesionaria de autos. Comprá tu auto 0Km fácil y rápido.">
 </head>
 <body>
     <header>
@@ -50,7 +58,8 @@
     </header>
     <main>
         <section class="bienvenida">
-            <h1>PREGUNTAS FRECUENTES</h1>
+            <h1>GRUPO GLANZ</h1>
+            <p>Preguntas frecuentes </p>
         </section>
         <section>
             <div class="accordion m-5 pregunta" id="accordionExample">
